crates/seele-tui/tests/snapshots/views_snapshot__browse_empty_state_renders_hint.snap
---
source: crates/seele-tui/tests/views_snapshot.rs
expression: buffer_dump(&term)
---
SEELE v0.1.0  [1] Home [2] Browse [3] Search [4] Detail [5] Stats                                                       
┌browse (0 active)─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  (no observations — save one with `seele save <title> <content>` and press 'r')                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[j/k] move  [enter] open  [/] search  [r] refresh  [q] quit
