crates/seele-tui/tests/snapshots/views_snapshot__browse_renders_list_with_selection_at_zero.snap
---
source: crates/seele-tui/tests/views_snapshot.rs
expression: buffer_dump(&term)
---
SEELE v0.1.0  [1] Home [2] Browse [3] Search [4] Detail [5] Stats                                                       
┌browse (3 active)─────────────────────────────────────────────────────────────────────────────────────────────────────┐
│01HW000000…  [seele]  alpha                                                                                           │
│01HW000000…  [seele]  beta                                                                                            │
│01HW000000…  [seele]  gamma                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[j/k] move  [enter] open  [/] search  [r] refresh  [q] quit
