crates/seele-tui/tests/snapshots/views_snapshot__detail_empty_state_when_no_observation_selected.snap
---
source: crates/seele-tui/tests/views_snapshot.rs
expression: buffer_dump(&term)
---
SEELE v0.2.0  [1] Home [2] Browse [3] Search [4] Detail [5] Stats                                                       
┌detail────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  (no observation selected — pick one in browse/search and press Enter)                                               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[esc/h/⌫] back  [q] quit
