crates/seele-tui/tests/snapshots/views_snapshot__detail_renders_observation_card_body_metadata.snap
---
source: crates/seele-tui/tests/views_snapshot.rs
expression: buffer_dump(&term)
---
SEELE v0.1.0  [1] Home [2] Browse [3] Search [4] Detail [5] Stats                                                       
┌memory 01HWDETAIL000000000000000──────────────────────────────────────────────────────────────────────────────────────┐
│  Created:   2023-11-14 22:13:20 UTC                                                                                  │
│  Updated:   2023-11-14 22:13:20 UTC                                                                                  │
│  Project:   seele                                                                                                    │
│  Scope:     project                                                                                                  │
│  Topic key: -                                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌body──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│deep dive                                                                                                             │
│                                                                                                                      │
│stub content                                                                                                          │
│second line                                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌metadata──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│{                                                                                                                     │
│  "kind": "memory"                                                                                                    │
│}                                                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[esc/h/⌫] back  [q] quit
