crates/seele-tui/tests/snapshots/views_snapshot__home_renders_stats_and_breakdowns.snap
---
source: crates/seele-tui/tests/views_snapshot.rs
expression: buffer_dump(&term)
---
SEELE v0.2.0  [1] Home [2] Browse [3] Search [4] Detail [5] Stats                                                       
┌home──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│📊  Stats                                                                                                              │
│  Total memories: 14                                                                                                  │
│  Active:         12                                                                                                  │
│  Soft-deleted:   2                                                                                                   │
│  Projects:       3                                                                                                   │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌by kind───────────────────────────────────────────────────┐┌by scope──────────────────────────────────────────────────┐
│  memory         8                                        ││  project        10                                       │
│  decision       4                                        ││  personal       2                                        │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
[1-5] panes  [r] refresh  [q] quit
