crates/seele-tui/tests/snapshots/views_snapshot__last_error_surfaces_in_footer.snap
---
source: crates/seele-tui/tests/views_snapshot.rs
expression: buffer_dump(&term)
---
SEELE v0.1.0  [1] Home [2] Browse [3] Search [4] Detail [5] Stats                                                       
┌home──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│📊  Stats                                                                                                              │
│  (no stats yet — press 'r' to refresh)                                                                               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌by kind───────────────────────────────────────────────────┐┌by scope──────────────────────────────────────────────────┐
│  (no data)                                               ││  (no data)                                               │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
[1-5] panes  [r] refresh  [q] quit  error: boom
