crates/seele-tui/tests/snapshots/views_snapshot__search_empty_state_prompts_for_query.snap
---
source: crates/seele-tui/tests/views_snapshot.rs
expression: buffer_dump(&term)
---
SEELE v0.1.0  [1] Home [2] Browse [3] Search [4] Detail [5] Stats                                                       
┌query─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│█                                                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌results (0)───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  (type a query and press Enter)                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[type] query  [enter] run  [esc] clear/back  [↑↓] move  [q] quit
