crates/seele-tui/tests/snapshots/views_snapshot__search_renders_query_and_results.snap
---
source: crates/seele-tui/tests/views_snapshot.rs
expression: buffer_dump(&term)
---
SEELE v0.1.0  [1] Home [2] Browse [3] Search [4] Detail [5] Stats                                                       
┌query─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│rate limit█                                                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌results (1)───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│01HW000000…  ★0.95  [seele]  stripe rate-limit policy                                                                 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[type] query  [enter] run  [esc] clear/back  [↑↓] move  [q] quit
