crates/seele-tui/tests/snapshots/views_snapshot__stats_empty_state_renders_hint.snap
---
source: crates/seele-tui/tests/views_snapshot.rs
expression: buffer_dump(&term)
---
SEELE v0.1.0  [1] Home [2] Browse [3] Search [4] Detail [5] Stats                                                       
┌stats─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  (no stats yet — press 'r' to refresh)                                                                               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[r] refresh  [q] quit
