crates/seele-tui/tests/snapshots/views_snapshot__stats_renders_full_breakdown.snap
---
source: crates/seele-tui/tests/views_snapshot.rs
expression: buffer_dump(&term)
---
SEELE v0.1.0  [1] Home [2] Browse [3] Search [4] Detail [5] Stats                                                       
┌observations──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│observations                                                                                                          │
│  active:        12                                                                                                   │
│  soft-deleted:  2                                                                                                    │
│  projects:      3                                                                                                    │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌sessions──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│sessions                                                                                                              │
│  total:         1                                                                                                    │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌by type───────────────────────────────────────────────────┐┌by scope──────────────────────────────────────────────────┐
│  memory         8                                        ││  project        10                                       │
│  decision       4                                        ││  personal       2                                        │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
[r] refresh  [q] quit
